Graphs are now saved to savedGraphs Folder in Main